# Gelai_AI-Translate

./: .gitignore  README.md  README.zh-CN.md  config.example.yaml  config.minimal.yaml  pyproject.toml  requirements.txt  requirements_download.txt
config/: settings.py
config/prompts/: context.txt  translate.txt  translate_local.txt  translate_local_stage1.txt  translate_local_stage2.txt  translation_context.txt
core/: __init__.py  audio_extract.py  audio_split.py  google_llm.py  llm_segment.py  llm_translate.py  step2_asr.py  step2_audio.py  step2_diarization.py  step2_inputs.py  step2_runtime.py  timestamp_matcher.py  translation_batches.py  translation_context.py  translation_prompts.py  translation_runtime.py  translation_text.py  translation_validation.py  validate_segments.py  youtube_metadata.py
docs/: DESKTOP_GUI.md  DESKTOP_GUI.zh-CN.md  OPEN_SOURCE_PLAN.md  STEP1_SETUP.md  STEP2_SETUP.md  STEP3_SETUP.md  STEP4_SETUP.md
gelai_translate/: __init__.py  cli.py  runtime.py
gelai_translate/gui/: configview.py  envcheck.py  main.py  window.py  worker.py
gelai_translate/gui/pages/: logs.py  project.py  step1.py  step2.py  step3.py  step4.py
packaging/windows/: README.md  gelai_translate_gui.spec
pipeline/: __init__.py  step1_download.py  step2_ingest.py  step3_translate.py  step4_render.py
tests/: support.py  test_llm_translate_runtime.py  test_step1_download.py  test_translation_context.py  test_translation_runtime.py  test_translation_text.py
